@@ -1,3 +1,10 @@
+OSSN - OPEN SOURCE SOCIAL NETWORK 3.6
+
+Bugfixes:
+
+* Message Inbox section - layout error #542
+
+
 OSSN - OPEN SOURCE SOCIAL NETWORK 3.4-3.5
 
 Bugfixes:
